fix spacing landing

--- a/main.css
+++ b/main.css
@@ -459,7 +459,7 @@ html, body {
 }
 
 .intro h1 {
-    font-size: 6em;
+    font-size: 5.75em;
     line-height: 1.33;
 }
 
